# tset

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  RFC.md  ROADMAP.md  RUST_PORT.md  SPEC.md
.github/workflows/: bench-smoke.yml  ci.yml  conformance.yml  fuzz.yml  pages.yml  release.yml  supply-chain.yml
benchmarks/: README.md  __main__.py  stream_throughput.py
benchmarks/baselines/: jsonl_baseline.py  raw_bin.py
benchmarks/corpus/excl-dataset/: exclusions.json  manifest.tset.json
benchmarks/corpus/excl-dataset/shards/: part-00000.tset  part-00001.tset  part-00002.tset  part-00003.tset  part-00004.tset
benchmarks/harness/: __main__.py  corpus.py  runner.py
crates/tset-bench/: Cargo.toml
crates/tset-bench/benches/: proofs.rs  smt.rs  streaming.rs  writer.rs
crates/tset-bench/src/: lib.rs
crates/tset-cli/: Cargo.toml  README.md
crates/tset-cli/src/: main.rs
crates/tset-cli/tests/: cli.rs
crates/tset-core/: Cargo.toml  README.md
crates/tset-core/src/: audit_log.rs  columns.rs  constants.rs  dataset.rs  document_store.rs  error.rs  footer.rs  hashing.rs  header.rs  lib.rs  manifest.rs  mixture.rs  object_store.rs  reader.rs  sections.rs  signing.rs  smt.rs  tokenizer_view.rs  tokenizers.rs  writer.rs
crates/tset-core/tests/: binary_sections.rs  conformance.rs  dataset_overlay_validation.rs  fuzz_property.rs  malformed.rs  object_store_open.rs  roundtrip.rs
crates/tset-py/: Cargo.toml  README.md  pyproject.toml
crates/tset-py/src/: lib.rs
docs/: index.html  robots.txt  sitemap.xml
docs/assets/: style.css
docs/compliance/: COMPLIANCE.md
docs/security/: THREAT_MODEL.md
docs/showcase/: index.html
examples/: __init__.py
examples/compliance/: audit.py
examples/cookbook/: deletion_end_to_end.py  multi_shard_streaming.py  parquet_to_tset.py  training_loop.py  verify_offline.py
examples/datasets/: .gitignore  README.md  SCALING.md
examples/datasets/_lib/: __init__.py  cache.py  licenses.py  metrics.py  profile_size.py
examples/datasets/click_source/: LICENSE.txt  README.md  RESULTS.md  convert.py  download.py
examples/datasets/synthetic_stream/: README.md  competitive.py  generate.py  scale_bench.py
examples/datasets/tinyshakespeare/: LICENSE.txt  README.md  RESULTS.md  bench.py  convert.py  download.py  prove.py
examples/published/: PUBLISHED-ROOT.txt  README.md  build.py  corpus.tset  verify.py
examples/recipes/: hf_tokenizer_bpe.py  sentencepiece_recipe.py  tiktoken_recipe.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: reader_open.rs  sections_decode.rs
governance/: GOVERNANCE.md  RFC_PROCESS.md
python/: pyproject.toml
python/examples/: exclusion_workflow.py  jsonl_to_tset.py  tokenizer_swap_demo.py
python/tests/: conftest.py  test_audit_log.py  test_binary_sections.py  test_columns_and_mixture.py  test_compliance_audit.py  test_conformance.py  test_converters.py  test_converters_pr5.py  test_cookbook.py  test_dataloader.py  test_dataset.py  test_hashing_delegation.py  test_header_footer.py  test_hf_adapter.py  test_hf_tokenizer.py  test_hf_tokenizer_recipe.py  test_pr10_signing.py  test_pr7.py  test_pr8_streaming.py  test_pr9_bitpacking.py  test_published_corpus.py  test_release_versions.py  test_review_findings.py  test_rust_append_view.py  test_rust_dataset.py  test_rust_reader.py  test_rust_sections.py  test_rust_writer.py  test_rust_writer_adapter.py  test_sentencepiece_recipe.py  test_smt.py  test_streaming_memory.py  test_tiktoken_recipe.py  test_torch_dataset.py  test_writer_reader.py
python/tests/showcase/: conftest.py  test_click_source.py  test_synthetic_stream.py  test_tinyshakespeare.py
python/tset/: __init__.py  _predicate.py  audit_log.py  columns.py  constants.py  converters.py  dataloader.py  dataset.py  document_store.py  footer.py  hashing.py  header.py  hf.py  hf_tokenizer.py  manifest.py  mixture.py  reader.py  rust_writer.py  sections.py  sentencepiece_tokenizer.py  smt.py  tiktoken_tokenizer.py  tokenizer_view.py  tokenizers.py  torch_dataset.py  writer.py
scripts/: check-release-versions.py
spec/: binary-layout.md  glossary.md  smt-design.md
tests/conformance/: build_corpus.py  build_v01_fixture.py
tests/conformance/fixtures/: fixture-big.expected.json  fixture-big.tset  fixture-empty.expected.json  fixture-empty.tset  fixture-sections.expected.json  fixture-sections.tset  fixture-small.expected.json  fixture-small.tset  fixture-v01-small.expected.json  fixture-v01-small.tset
