[package]
name = "tset-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Empty `[workspace]` opts out of the parent workspace at /Cargo.toml.
# cargo-fuzz expects the fuzz crate to be free-standing so its
# nightly-only deps (libfuzzer-sys) don't pollute the stable workspace.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tset-core = { path = "../crates/tset-core" }
tempfile = "3"

# Required by cargo-fuzz convention. Each target is a separate bin.
[[bin]]
name = "reader_open"
path = "fuzz_targets/reader_open.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sections_decode"
path = "fuzz_targets/sections_decode.rs"
test = false
doc = false
bench = false

# Run with: cargo +nightly fuzz run <target>
# Targets:
#   reader_open       — Reader::open against arbitrary bytes
#   sections_decode   — TSMT / TLOG / TCOL binary section decoders
