[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tset"
version = "0.1.0"
description = "An open standard for LLM training data — verifiable, reusable, composable."
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "blake3>=0.4",
    "zstandard>=0.22",
    "numpy>=1.24",
]

[project.optional-dependencies]
parquet = ["pyarrow>=14"]
torch = ["torch>=2.0"]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tset*"]
