[package]
name = "tset-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Criterion benchmarks for the tset-core hot paths"
publish = false

[dev-dependencies]
tset-core = { path = "../tset-core" }
criterion = { version = "0.5", default-features = false, features = ["plotters", "html_reports"] }
tempfile = "3"

[[bench]]
name = "streaming"
harness = false

[[bench]]
name = "writer"
harness = false

[[bench]]
name = "smt"
harness = false
