[package]
name = "tset-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "TSET — open binary format for LLM training data: reader, writer, sparse Merkle tree, signed audit log."

[dependencies]
blake3 = { workspace = true }
zstd = { workspace = true }
memmap2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
tempfile = "3"

[dev-dependencies]
