[package]
name = "tset-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python bindings (PyO3) for the tset-core Rust implementation"

[lib]
name = "tset_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
tset-core = { path = "../tset-core" }
pyo3 = { workspace = true }
hex = { workspace = true }
