[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "tset-rs"
version = "0.2.0"
description = "PyO3 bindings for the tset-core Rust implementation"
requires-python = ">=3.9"
license = { text = "MIT" }
readme = "../../README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "tset_rs"
